--- a/index.html
+++ b/index.html
@@ -6,36 +6,41 @@
     <title>ELCE</title>
 </head>
 <body>
-    <p><a href = "https://google.com"   target = "_blank">Open in new tab</a></p>
-    <p><a href = "mailto:abc@gmail.com" title = "Wait its loading">Send an email</a></p>
-    <p><a href = "tel:+911290678453">Call us at +91-1290678453</a></p>
+    <p><a href="https://google.com" target="_blank">Open in new tab</a></p>
+    <p><a href="mailto:abc@gmail.com" title="Wait its loading">Send an email</a></p>
+    <p><a href="tel:+911290678453">Call us at +91-1290678453</a></p>
     
-    <label for  = "email">Email Address:</label>
-    <input type = "email" id = "email" name = "email"/>
+    <label for="email">Email Address:</label>
+    <input type="email" id="email" name="email"/>
 
-    <img src ="C:\Users\ayush\OneDrive\Desktop\ELCE\travel.jpg"
-        alt = "Workspace"
-        usemap = "#workmap"
-        width = "50%vw"
-        height = "50%vh"
+    <!-- Use relative path for the image -->
+    <img src="travel.jpg"
+        alt="Workspace"
+        usemap="#workmap"
+        width="50%"
+        height="50%"
     />
 
-    <map name = "workmap">
+    <map name="workmap">
         <area
-        shape = "rect"
+        shape="rect"
         coords="34,44,270,350"
-        alt = "Computer"
-        href = "https://www.wikipedia.org/"
+        alt="Computer"
+        href="https://www.wikipedia.org/"
         target="_self"
         />
     </map>
 
-    <audio controls = "auto">
-        <source src = "C:\Users\ayush\OneDrive\Desktop\ELCE\Drop the Tapes - TrackTribe.mp3" type = "audio/mp3" />
+    <!-- Use relative path for the audio file -->
+    <audio controls>
+        <source src="Drop the Tapes - TrackTribe.mp3" type="audio/mp3" />
+        Your browser does not support the audio element.
     </audio>
 
-    <video controls = "auto" width = "320" height = "200">
-        <source src = "" type = "video/mp4" />
+    <!-- Use relative path for the video file, if you have a video file -->
+    <video controls width="320" height="200">
+        <source src="your-video-file.mp4" type="video/mp4" />
+        Your browser does not support the video element.
     </video>
 </body>
 </html>
